--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@assets/*": ["public/assets/*"],
       "@components/*": ["app/components/*"],
       "@layouts/*": ["app/layouts/*"],
+      "@lib/*": ["app/lib/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
